--- a/src/main/resources/static/ejemplo2.html
+++ b/src/main/resources/static/ejemplo2.html
@@ -4,16 +4,30 @@
     <head>
         <title>Techshop</title>
         <meta charset="UTF-8"/>
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
-        <a href="index.html">Home</a> |
-        <a href="ejemplo2.html">Ejemplo 2</a>
-        <hr>
+        <header>
+            <nav>
+               <a class="nav-link logo" href="index.html">TechShop</a>  
+               <ul class="nav-menu">
+                   <li class="nav-menu-item"><a class="nav-link enlace" href="ejemplo2.html">Ejemplo 2</a></li>
+                   <li class="nav-menu-item"><a class="nav-link enlace" href="multimedia.html">Multimedia</a></li>
+                   <li class="nav-menu-item"><a class="nav-link enlace" href="iframes.html">iFrames</a></li>
+               </ul>
+            </nav>
+        </header>
+        <aside>
         <h1 style="text-align: center;background-color: blue;color: white">Ejemplo 2</h1>
         <h2>Imagenes</h2>
+        </aside>
+        <section>
         <img src="perrito1.jpg" width="250" alt=""/>
         <br>
         <img src="https://i.pinimg.com/originals/f8/5b/30/f85b300957042010b384f177a21b5a20.jpg" width="250" alt=""/>
-        
+        </section>
+        <footer>
+            TechShop 2025, Todos los Derechos Reservados &COPY;
+        </footer>
     </body>
 </html>
