--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -4,15 +4,32 @@
     <head>
         <title>Techshop</title>
         <meta charset="UTF-8"/>
+        <link href="css/estilos.css" rel="stylesheet" type="text/css"/>
     </head>
-    <body>
-        <a href="index.html">Home</a> |
-        <a href="ejemplo2.html">Ejemplo 2</a>
+    <body> 
+        <header>
+            <nav>
+               <a class="nav-link logo" href="index.html">TechShop</a>  
+               <ul class="nav-menu">
+                   <li class="nav-menu-item"><a class="nav-link enlace" href="ejemplo2.html">Ejemplo 2</a></li>
+                   <li class="nav-menu-item"><a class="nav-link enlace" href="multimedia.html">Multimedia</a></li>
+                   <li class="nav-menu-item"><a class="nav-link enlace" href="iframes.html">iFrames</a></li>
+               </ul>
+            </nav>
+        </header>
+        <aside>
         <hr>
-        <h1 style="text-align: center;background-color: blue;color: white">Home</h1>
-        <h2>Etiquetas básicas</h2>
-        <p>Esto <b>es un primer parrafo</b> de prueba</p>
-        <p>Esto <i>es un segundo parrafo</i> de prueba</p>
-        <p>Esto <u>es un tercer parrafo</u> de prueba</p>
+            <h1 style="text-align: center;background-color: blue;color: white">Home</h1>
+            <h2>Etiquetas básicas</h2>
+        </aside>
+        <section>
+            <p>Esto <b>es un primer parrafo</b> de prueba</p>
+            <p>Esto <i>es un segundo parrafo</i> de prueba</p>
+            <p>Esto <u>es un tercer parrafo</u> de prueba</p>
+        </section>
+        <footer>
+            TechShop 2025, Todos los Derechos Reservados &COPY;
+        </footer>
+            
     </body>
 </html>
